<?xml version="1.0"?>
<package>
  <name>px4_msgs</name>
  <version>0.0.0</version>
  <description>The px4_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vmonge@todo.todo">vmonge</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
